style: Fix toast z-index and misc styles in POAM child components

--- a/client/src/app/pages/poam-processing/poam-details/components/poam-chat/poam-chat.component.scss
+++ b/client/src/app/pages/poam-processing/poam-details/components/poam-chat/poam-chat.component.scss
@@ -27,7 +27,6 @@
 }
 
 ::ng-deep .p-dialog.p-dialog .p-dialog-header.p-dialog-header {
-  justify-content: space-between !important;
   position: relative !important;
 }
 
